testing/tests/ui/char_literal.stderr
error: the previous template error derives from
 --> tests/ui/char_literal.rs:4:19
  |
4 | #[template(path = "char-literals/char-literal-1.txt")]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
 --> tests/ui/char_literal.rs:8:19
  |
8 | #[template(path = "char-literals/char-literal-2.txt")]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/char_literal.rs:12:19
   |
12 | #[template(path = "char-literals/char-literal-3.txt")]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/char_literal.rs:16:19
   |
16 | #[template(path = "char-literals/char-literal-4.txt")]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/char_literal.rs:20:19
   |
20 | #[template(path = "char-literals/char-literal-5.txt")]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/char_literal.rs:24:19
   |
24 | #[template(path = "char-literals/char-literal-6.txt")]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/char_literal.rs:28:19
   |
28 | #[template(path = "char-literals/char-literal-7.txt")]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/char_literal.rs:32:21
   |
32 | #[template(source = "{% let s = 'aaa' %}", ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^
